--- a/app/views/buchung/_form_reductions.html.slim
+++ b/app/views/buchung/_form_reductions.html.slim
@@ -37,7 +37,7 @@
         legend Bitte geben Sie für eventuelle kurzfristige Absagen einen Kontakt an, unter dem Sie erreichbar sind:
         .row
           .col-md-6 = f.input :contact_phone,  as: :tel,   placeholder: '* Telefon/Mobil'
-          .col-md-6 = f.input :contact_email,  as: :email, placeholder: '* E-Mail'
+          .col-md-6 = f.input :contact_email,  as: :email, placeholder: 'E-Mail'
 
       fieldset
         legend Ich möchte folgenden Rabatt in Anspruch nehmen:
@@ -53,24 +53,26 @@
                 label
                   => f.radio_button :reduction, :early, disabled: (Date.current > @seminar.date - @seminar.pre_booking_weeks.weeks)
                   | 10% Frühbucher*innen-Rabatt (#{@seminar.pre_booking_weeks} Wochen im Voraus)
-            span.radio
-              label
-                => f.radio_button :reduction, :tandem
-                | 10% Tandem-Rabatt (nur für Kurse)
-            .reduction-content
-              p: small Ich nehme den Rabatt gemeinsam mit folgender Person in Anspruch: (Diese Person muss sich eigenständig anmelden.)
-              .row
-                .col-md-6 = f.input :tandem_name, placeholder: 'Name, Vorname'
-                .col-md-6 = f.input :tandem_company, placeholder: 'Einrichtung'
-              = f.input :tandem_address, placeholder: 'Bitte geben Sie Name und Anschrift des Trägers der Einrichtungen an',
-                  hint: 'Angabe zur Einlösung des Rabatts notwendig'
-            span.radio
-              label
-                => f.radio_button :reduction, :pari
-                | 5% PARITÄTER-Rabatt (nur für Kurse)
-            .row.reduction-content
-              .col-md-6 = f.input :member, label: t('buchung.new.member')
-              .col-md-6 = f.input :member_institution, label: t('buchung.new.member_institution')
+            - if @seminar.tandem_reducible?
+              span.radio
+                label
+                  => f.radio_button :reduction, :tandem
+                  | 10% Tandem-Rabatt (nur für Kurse)
+              .reduction-content
+                p: small Ich nehme den Rabatt gemeinsam mit folgender Person in Anspruch: (Diese Person muss sich eigenständig anmelden.)
+                .row
+                  .col-md-6 = f.input :tandem_name, placeholder: 'Name, Vorname'
+                  .col-md-6 = f.input :tandem_company, placeholder: 'Einrichtung'
+                = f.input :tandem_address, placeholder: 'Bitte geben Sie Name und Anschrift des Trägers der Einrichtungen an',
+                    hint: 'Angabe zur Einlösung des Rabatts notwendig'
+            - if @seminar.pari_reducible?
+              span.radio
+                label
+                  => f.radio_button :reduction, :pari
+                  | 5% PARITÄTER-Rabatt (nur für Kurse)
+              .row.reduction-content
+                .col-md-6 = f.input :member, label: t('buchung.new.member')
+                .col-md-6 = f.input :member_institution, label: t('buchung.new.member_institution')
             span.radio
               label
                 => f.radio_button :reduction, :group, disabled: true
@@ -83,6 +85,7 @@
             .row.reduction-content
               .col-md-6 = f.input :school, collection: t('bookings.schools'), include_blank: false
               .col-md-6 = f.input :year, placeholder: 'Abschlussjahr'
+              p: small Sollte der Abschluss länger als 10 Jahre zurückliegen, bitte eine Kopie des Abschlusszeugnisses einreichen.
 
       fieldset
         legend Bemerkungen
