static content updates

--- a/app/views/layouts/external/_footer.html.slim
+++ b/app/views/layouts/external/_footer.html.slim
@@ -45,7 +45,7 @@ footer
           |  Wiener Straße 2 |
           |  39112 Magdeburg |
           |  Tel.: (0391) 6293313 |
-          |  Fax: (0391) 6293555 |
+          |  Fax: (0391) 6293596313 |
           a href="mailto:bildungswerk@paritaet-lsa.de"  bildungswerk@paritaet-lsa.de
         .col-sm-3
           - if current_user
@@ -56,4 +56,4 @@ footer
     .container
       .row
         .col-md-12
-          | Copyright © PARITÄTISCHES Bildungswerk Sachsen-Anhalt 2017
+          | Copyright © Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH 2017
