--- a/app/views/static_pages/data_info.html.slim
+++ b/app/views/static_pages/data_info.html.slim
@@ -38,6 +38,6 @@
     Ihrem Bundesland wenden.
 
   h2 Sie erreichen uns unter folgenden Kontaktdaten:
-  p PARITÄTISCHES Bildungswerk Landesverband Sachsen-Anhalt e.V. <br>Wiener Str. 2, <br>39108 Magdeburg
+  p Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH <br>Wiener Str. 2, <br>39112 Magdeburg
   p Geschäftsführerin: Silke Mertens<br> Telefon: 0391 / 6293 313, <br>E-Mail: bildungswerk@paritaet-lsa.de
   p Unseren Datenschutzbeauftragten Herrn Frank Spaeing erreichen Sie unter  E-Mail datenschutz@paritaet-lsa.de
