--- a/app/views/static_pages/data_protection.html.slim
+++ b/app/views/static_pages/data_protection.html.slim
@@ -8,8 +8,8 @@
 
   h2 Name und Anschrift des*der Verantwortlichen
   p Verantwortliche*r im Sinne der Datenschutz-Grundverordnung, sonstiger in den Mitgliedstaaten der Europäischen Union geltenden Datenschutzgesetze und anderer Bestimmungen mit datenschutzrechtlichem Charakter ist:
-    <br>PARITÄTISCHES Bildungswerk Landesverband Sachsen-Anhalt e.V.
-    <br>Wiener Str. 2, 39108 Magdeburg
+    <br>Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH
+    <br>Wiener Str. 2, 39112 Magdeburg
     <br>Geschäftsführerin: Silke Mertens
     <br>Telefon: 0391 / 6293 313
     <br>E-Mail: bildungswerk@paritaet-lsa.de
@@ -17,8 +17,8 @@
   h2 Name und Anschrift des Datenschutzbeauftragten
   p Der Datenschutzbeauftragte des für die Verarbeitung Verantwortlichen ist:
     <br>Frank Spaeing
-    <br>c/o PARITÄTISCHES Bildungswerk Landesverband Sachsen-Anhalt e.V.
-    <br>Wiener Str. 2, 39108 Magdeburg
+    <br>c/o Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH
+    <br>Wiener Str. 2, 39112 Magdeburg
     <br>E-Mail datenschutz@paritaet-lsa.de
 
   h2 Cookies
