fix email footer

--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -29,14 +29,13 @@ p Freundliche Grüße <br> PARITÄTISCHES Bildungswerk <br> (PBW)
 
 .address
   p www.bildungswerk-lsa.de bildungswerk@paritaet-lsa.de
-  p Landesverband Sachsen-Anhalt e.V. <br>
+  p Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH <br>
     Wiener Str. 2 <br>
     39112 Magdeburg
 
   p Tel. 0391/6293-311 <br>
     Fax. 0391/6293-555
 
-  p Amtsgericht Magdeburg, Vereinsregister Nr. VR 1430 <br>
-    USt-Nr.: 101/142/02695 <br>
-    Vorstandsvorsitzende: <br>
-    Dr. Gabriele Girke
+  p Geschäftsführerin Silke Mertens <br>
+    Amtsgericht Stendal HRB 25936 <br>
+    Steuernr. 102/142/06833
