--- a/app/views/booking_mailer/booking_confirmation_email.text.erb
+++ b/app/views/booking_mailer/booking_confirmation_email.text.erb
@@ -16,7 +16,7 @@ PARITÄTISCHES Bildungswerk
 
 www.bildungswerk-lsa.de bildungswerk@paritaet-lsa.de
 
-Landesverband Sachsen-Anhalt e.V.
+Gemeinütziges Paritätisches Bildungswerk Sachsen-Anhalt - PBW GmbH
 Wiener Str. 2
 39112 Magdeburg
 
@@ -24,8 +24,7 @@ Wiener Str. 2
 Tel. 0391/6293-311
 Fax. 0391/6293-555
 
-Amtsgericht Magdeburg, Vereinsregister Nr. VR 1430
-USt-Nr.: 101/142/02695
-Vorstandsvorsitzende:
-Dr. Gabriele Girke
+Geschäftsführerin Silke Mertens
+Amtsgericht Stendal HRB 25936
+Steuernr. 102/142/06833
 
