add additional info for reduction

--- a/app/views/admin/bookings/_form.html.slim
+++ b/app/views/admin/bookings/_form.html.slim
@@ -73,7 +73,7 @@
         span.radio
           label
             => f.radio_button :reduction, :group
-            | Gruppen-Rabatt (ab 5 Personen)
+            | Gruppen-Rabatt (ab 5 Personen einer Einrichtung)
         span.radio
           label
             => f.radio_button :reduction, :school
