--- a/app/views/buchung/_form_reductions.html.slim
+++ b/app/views/buchung/_form_reductions.html.slim
@@ -76,7 +76,7 @@
             span.radio
               label
                 => f.radio_button :reduction, :group, disabled: true
-                | 10% Gruppen-Rabatt (ab 5 Personen)
+                | 10% Gruppen-Rabatt (ab 5 Personen einer Einrichtung)
             .reduction-content Ich melde für die o.g. Veranstaltung gleichzeitig o.g. Personen aus meiner Einrichtung an.
             span.radio
               label
