group and school reducible for seminars

--- a/app/views/admin/seminars/form/_booking.html.slim
+++ b/app/views/admin/seminars/form/_booking.html.slim
@@ -14,5 +14,7 @@
       = f.input :pre_booking_weeks, include_blank: false, placeholder: '0'
       = f.input :tandem_reducible
       = f.input :pari_reducible
+      = f.input :group_reducible
+      = f.input :school_reducible
 
 = f.input :external_booking_address, placeholder: 'E-Mail-Adresse angeben'
