--- a/app/views/static_pages/reductions.html.slim
+++ b/app/views/static_pages/reductions.html.slim
@@ -8,7 +8,7 @@
   p Die Seminare und Kurse, für die Sie einen Frühbucher*innen-Rabatt erhalten können, sind in der jeweiligen Seminarbeschreibung entsprechend gekennzeichnet.
 
   strong Gruppen-Rabatt
-  p Sie erhalten 10% Rabatt pro Person bei gleichzeitiger Anmeldung von mindestens 5 Personen für ein Seminar.
+  p Sie erhalten 10% Rabatt pro Person bei gleichzeitiger Anmeldung von mindestens 5 Personen einer Einrichtung für ein Seminar.
 
   strong Tandem-Rabatt für Kurse
   p Wir gewähren bei Buchung desselben Kurses durch zwei Mitarbeiter*innen aus zwei verschiedenen Einrichtungen eines Trägers 10% Rabatt auf den Kurspreis.
