fix pdf sizes (wkhtmltopdf-binary downgrade)

--- a/app/assets/stylesheets/pdf.css.sass
+++ b/app/assets/stylesheets/pdf.css.sass
@@ -2,32 +2,30 @@
 @import bootstrap
 
 .main
-  padding: 50px 50px 50px 170px
-  border: 20px solid $brand-primary
-  height: 4070px
+  border: 5px solid $brand-primary
+  height: 73em
 .logo
   float: right
-  width: 1000px
-  height: 300px
+  width: 280px
+  height: 100px
   overflow: hidden
   img
     position: relative
-    top: -550px
+    top: -140px
 
 .content
-  margin-top: 400px
+  padding: 0 2em
+  //border: 1px solid green
 .page-break
   display: block
   clear: both
   page-break-after: always
 
-*
-  font-size: 55px
 
 h1
   font-size: 2em
   font-weight: bold
-  top: 2em
+  margin-top: 3em
   color: $brand-primary
   text-transform: uppercase
 h2
@@ -37,19 +35,19 @@ h2
 h3
   font-size: 1.2em
   font-weight: bold
-  margin-top: 80px
+  margin-top: 1em
 
 table
-  margin-top: 100px
+  margin-top: 1em
   th, td
-    border: 0 !important
+    padding-bottom: 0.3em
   th
-    width: 400px
+    width: 25%
 footer
   //border: 1px solid red
   position: fixed
-  bottom: 20px
-  margin-left: 250px
+  bottom: 0
+  width: 100%
   p.homepage
     text-align: center
     font-size: 1.4em
