--- a/app/assets/stylesheets/pdf.css.sass
+++ b/app/assets/stylesheets/pdf.css.sass
@@ -1,36 +1,30 @@
 @import bootstrap-sprockets
 @import bootstrap
 
-.main
-  border: 5px solid $brand-primary
-  height: 73em
-.logo
-  float: right
-  width: 280px
-  height: 100px
-  overflow: hidden
-  img
-    position: relative
-    top: -140px
-
 .content
+  //border: 3px solid $brand-primary
   padding: 0 2em
-  //border: 1px solid green
+header
+  .logo
+    width: 100%
+    height: 6em
+    img
+      float: right
+
 .page-break
   display: block
   clear: both
   page-break-after: always
 
-
 h1
   font-size: 2em
   font-weight: bold
-  margin-top: 3em
   color: $brand-primary
   text-transform: uppercase
 h2
   font-size: 1.4em
   font-weight: bold
+  margin-top: 3em
   margin-bottom: 2em
 h3
   font-size: 1.2em
@@ -38,25 +32,20 @@ h3
   margin-top: 1em
 
 table
-  margin-top: 1em
+  margin-top: 2em
   th, td
     padding-bottom: 0.3em
   th
     width: 25%
 footer
-  //border: 1px solid red
-  position: fixed
-  bottom: 0
-  width: 100%
-  p.homepage
+  p
     text-align: center
+  p.homepage
     font-size: 1.4em
     font-weight: bold
     color: $brand-primary
-    margin-bottom: 0.5em
     span
       color: red
       font-size: inherit
   p.address
-    text-align: center
-    font-size: 0.65em
+    font-size: 0.8em
