--- a/app/assets/stylesheets/external/template/_nav.sass
+++ b/app/assets/stylesheets/external/template/_nav.sass
@@ -21,6 +21,7 @@ nav.navbar
     position: relative
     bottom: 5px
     margin-left: 10px !important
+    background-size: 180px
   //.navbar-brand
     height: fit-content
     padding-bottom: 6px
