--- a/app/views/buchung/_form_reductions.html.slim
+++ b/app/views/buchung/_form_reductions.html.slim
@@ -45,7 +45,7 @@
           small Es kann nur ein Rabatt pro Teilnehmer*in in Anspruch genommen werden.
           br
           small Weitere Informationen zu unseren Rabatten finden Sie im Bildungskalender 2019 auf Seite 12
-            oder #{link_to 'hier', main_app.reductions_path}.
+            oder #{link_to 'hier', reductions_path}.
           .form-group.radio_buttons
             .control_group
               input type="hidden" name="booking[reduction]" value=""
