--- a/app/views/layouts/external/_old_nav.html.slim
+++ b/app/views/layouts/external/_old_nav.html.slim
@@ -4,6 +4,6 @@ ul.nav.navbar-nav.navbar-right
   li.dropdown.yellow-menu
     = link_to 'Team', 'http://bildungswerk-lsa.de/index.php?article_id=42'
   li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/(fort-und-weiterbildung|seminare)/)
-    = link_to 'Fort- und Weiterbildung', main_app.seminare_visitor_url
+    = link_to 'Fort- und Weiterbildung', seminare_visitor_url
   li.dropdown.yellow-menu
     = link_to 'Ausbildung', 'http://bildungswerk-lsa.de/index.php?article_id=44'
