change email in pdf footer

--- a/app/views/pdf/footer.pdf.slim
+++ b/app/views/pdf/footer.pdf.slim
@@ -3,4 +3,4 @@ footer
   p.address
     | Gemeinnütziges Paritätisches Bildungswerk – PBW GmbH
     br
-    | Wiener Str. 2 . 39112 Magdeburg . Telefon 0391 / 62 93 313 . Fax 0391 / 62 93 59 63 13 . Mail bildungswerk-lsa.de
+    | Wiener Str. 2 . 39112 Magdeburg . Telefon 0391 / 62 93 313 . Fax 0391 / 62 93 59 63 13 . Mail bildungswerk@paritaet-lsa.de
