external booking for part 2

--- a/app/views/bookings/_seminar.html.slim
+++ b/app/views/bookings/_seminar.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-md-2: label Seminarnr.
-  .col-md-6: strong = link_to @seminar.number, seminar_visitor_url(@seminar)
+  .col-md-6: strong = @seminar.number
 .row
   .col-md-2: label Titel
   .col-md-6 = @seminar.title
