--- a/app/views/bookings/new.html.slim
+++ b/app/views/bookings/new.html.slim
@@ -1,15 +1,13 @@
-/ - page_title_for @booking
-/ - content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
+- page_title_for @booking
 
-.container
-  - if @booking.errors.any?
-    .alert.alert-danger.alert-dismissable
-      button.close type="button" data-dismiss="alert"
-        span aria-hidden="true" &times;
-        span.sr-only Close
-      h4 = t('.error')
+- if @booking.errors.any?
+  .alert.alert-danger.alert-dismissable
+    button.close type="button" data-dismiss="alert"
+      span aria-hidden="true" &times;
+      span.sr-only Close
+    h4 = t('.error')
 
 
-  h3 Ich melde mich verbindlich für folgende Veranstaltung an:
-  = render 'seminar'
-  = render 'form'
+h4 Ich melde mich verbindlich für folgende Veranstaltung an:
+= render 'seminar'
+= render 'form'
