fix https assets

--- a/app/views/layouts/booking.html.slim
+++ b/app/views/layouts/booking.html.slim
@@ -13,7 +13,7 @@ html.no-js lang="de"
 
     = stylesheet_link_tag 'booking', media: 'all'
     link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,900" media="all"
-    link rel="stylesheet" type="text/css" href="http://pbw-lsa.org/fileadmin/templates/pwb_de/css/style.css" media="all"
+    link rel="stylesheet" type="text/css" href="https://pbw-lsa.org/fileadmin/templates/pwb_de/css/style.css" media="all"
 
     = javascript_include_tag 'booking'
     == csrf_meta_tags
