--- a/app/views/api/seminars/docs.html.slim
+++ b/app/views/api/seminars/docs.html.slim
@@ -87,7 +87,7 @@
         h2 2. Detailansicht
 
 
-      div.tab-pane.active#categories
+      div.tab-pane#categories
 
         h2 1. Listenansicht
         - url = api_categories_url(format: :json)
@@ -197,7 +197,7 @@
               ]
             }
 
-      div.tab-pane.active#locations
+      div.tab-pane#locations
 
         h2 Veranstaltungsorte
         - url = api_locations_url(format: :json)
