--- a/app/views/admin/seminars/form/_text.html.slim
+++ b/app/views/admin/seminars/form/_text.html.slim
@@ -1,1 +1,1 @@
-.form-inputs = f.input field, input_html: { class: 'editor' }, label: false
+.form-inputs = f.input field, input_html: { class: 'editor', data: { char_limit: char_limit } }, label: false
