--- a/app/assets/stylesheets/external/booking.sass
+++ b/app/assets/stylesheets/external/booking.sass
@@ -6,8 +6,10 @@
 @import bootstrap
 
 main
-  margin-bottom: 80px
-  margin-top: 30px
+  padding-bottom: 80px
+  //margin-top: 30px
+  background: #fff
 
 .logo-line
   margin-bottom: 50px
+
