--- a/app/views/layouts/booking.html.slim
+++ b/app/views/layouts/booking.html.slim
@@ -15,6 +15,11 @@ html.no-js lang="de"
     link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,900" media="all"
     link rel="stylesheet" type="text/css" href="https://www.pbw-lsa.de/fileadmin/templates/pbw_de/css/style.css?1568875356" media="all"
 
+    / style fixes
+    sass:
+      input, textarea
+        border: 1px solid grey !important
+
     = javascript_include_tag 'booking'
     == csrf_meta_tags
 
@@ -23,5 +28,5 @@ html.no-js lang="de"
       .container
         .logo-line
           .pull-right = link_to 'Zurück', (@back_path || 'javascript: window.history.back();')
-          = image_tag 'pbw-logo.png', width: 300
+          = image_tag 'pbw-logo.png', width: 300, style: 'width: 300px;'
         == yield
