--- a/app/views/layouts/old_site/_navigation.html.slim
+++ b/app/views/layouts/old_site/_navigation.html.slim
@@ -4,7 +4,7 @@
   .linki.linki2
     a href="http://bildungswerk-lsa.de/index.php?article_id=42"  TEAM
   .linki.linki2
-    a href=seminare_visitor_path FORT- &amp; WEITERBILDUNG
+    a href='https://www.pbw-lsa.de/fort_weiterbildung/seminare/' FORT- &amp; WEITERBILDUNG
   .linki.linki2
     a href="http://bildungswerk-lsa.de/index.php?article_id=44"  AUSBILDUNG
 
