--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -154,31 +154,5 @@
               span.seminar-name = seminar.title
               span.seminar-date = ldate seminar.date
     .col-md-12
-      .cta = link_to 'Weitere Seminare', seminare_visitor_url, class: 'cta-btn'
+      .cta = link_to 'Weitere Seminare', 'https://www.pbw-lsa.de/fort_weiterbildung/seminare/', class: 'cta-btn'
       .clearfix
-/ .container.testimonial
-  .row
-    .col-md-12
-      h2 DAS SAGEN UNSERE WEITERBILDUNGS- UND AUSBILDUNGSTEILNEHMER/INNEN
-    .col-md-4
-      .testimonial-bubble
-        p
-          | “Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-          | labore et dolore magna aliquyam erat, sed diam...”
-        span.author Jane Doe
-        .clearfix
-    .col-md-4
-      .testimonial-bubble
-        p
-          | “...Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-          | labsed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kmagna
-          | aliquyam erat, sed diam....”
-        span.author John Doe
-        .clearfix
-    .col-md-4
-      .testimonial-bubble
-        p
-          | “Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-          | labore et dolore magna aliquyam erat, sed diam...”
-        span.author Jane Doe
-        .clearfix
