--- a/app/views/layouts/external/_navigation.html.slim
+++ b/app/views/layouts/external/_navigation.html.slim
@@ -9,7 +9,7 @@ nav.navbar.navbar-default.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href=root_url
+      a.navbar-brand href='https://www.pbw-lsa.de/'
 
     #navbar-collapse.collapse.navbar-collapse
       = render 'layouts/external/old_nav'
